tests/good/local_var/foo.sm
(module Foo imports (StdLib))

(vars (
  (let X 10)
))

(functions (
  (function setX (newVal)
    (begin
      (set! X newVal)
      0
    )
  )

  (function getX ()
    X
  )
))
