tests/bad/call_variable/main.sm
(module Main imports (StdLib))

(vars ())

(functions (
  (function main ()
    (begin
      (let x 0)
      (x)
    )
  )
))


